<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_gd_energia"
        android:title="@string/menu_drawer_gd_energia"
        android:icon="@drawable/ic_menu_gd_energia"/>

    <item
        android:id="@+id/nav_cd_agua"
        android:title="@string/menu_drawer_cd_agua"
        android:icon="@drawable/ic_menu_cd_agua"/>

    <item
        android:id="@+id/nav_cobranca_ae"
        android:title="@string/menu_drawer_cobranca_ae"
        android:icon="@drawable/ic_menu_cobranca_ae"/>

    <item
        android:id="@+id/nav_l_medicao"
        android:title="@string/menu_drawer_l_medicao"
        android:icon="@drawable/ic_menu_l_medicao"/>

    <item
        android:id="@+id/nav_dc_ag"
        android:title="@string/menu_drawer_dc_ag"
        android:icon="@drawable/ic_menu_dc_ag"/>

</menu>